Fix unintentional jumps on mobile scroll down

--- a/mariaantici/src/styles/index.css
+++ b/mariaantici/src/styles/index.css
@@ -74,6 +74,11 @@
   display: inline-block;
 }
 
+.verticalTimeline {
+  overflow: hidden;
+  max-width: 100vw;
+}
+
 .vertical-timeline.vertical-timeline-custom-line::before {
   background: rgba(40, 33, 32, 0.4);
 }
